# desafio-codecon

./: README.md
data_api/: main.py  pyproject.toml
data_api/app/: main.py
data_api/app/schemas/: schemas.py
data_api/tests/: test_app.py
